--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,17 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install flake8 pytest
+            - name: flake8
+              run: |
+                  flake8 . \
+                      --count \
+                      --select=E9,F63,F7,F82 \
+                      --show-source \
+                      --statistics
+                  flake8 . \
+                      --count \
+                      --exit-zero \
+                      --statistics
+
+            - name: pytest
+              run: pytest tests/
