--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,23 @@ jobs:
 
             - name: pytest
               run: pytest tests/
+
+    trivy-scan:
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: checkout
+              uses: actions/checkout@v5
+
+            - name: trivy FS mode
+              uses: aquasecurity/trivy-action@0.33.1
+              with:
+                  scan-type: 'fs'
+                  format: 'sarif'
+                  output: 'results.sarif'
+                  severity: 'CRITICAL,HIGH'
+
+            - name: upload
+              uses: github/codeql-action/upload-sarif@v4
+              with:
+                  sarif_file: results.sarif
